outputs/csi500-test/eoh/2025-07-28_17-44-46/evaluations/problem_eval-1810328894870098699_stdout.txt
[*] Running ...
Traceback (most recent call last):
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 68, in <module>
    heuristics = load_heuristic_func(code_path)
                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/renjunji_2023/reevo/problems/csi500/eval.py", line 19, in load_heuristic_func
    spec.loader.exec_module(module)
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/renjunji_2023/reevo/problems/csi500/tmp/gpt_temp_5_76c13feb.py", line 1
    defined lookback periods and incorporating price and volume features to generate a unique heuristics factor for each date.}
                                                                                                                              ^
SyntaxError: unmatched '}'
